Bug 44391 - [4.6 Regression] gcc.dg/graphite/id-19.c ICEs at -Os (in build2_stat, at tree.c:3670)
Summary: [4.6 Regression] gcc.dg/graphite/id-19.c ICEs at -Os (in build2_stat, at tree...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Sebastian Pop
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-02 18:55 UTC by Zdenek Sojka
Modified: 2010-06-15 19:13 UTC (History)
2 users (show)

See Also:
Host: x86_64-pc-linux-gnu
Target: i686-pc-linux-gnu
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-06-02 19:28:58


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zdenek Sojka 2010-06-02 18:55:46 UTC
Command line:
$ g++ -fgraphite-identity -m32 -Os id-19.c

Compiler output:
$ /mnt/svn/gcc-trunk/binary-160165-lto-fortran/bin/g++ -fgraphite-identity -m32 -Os id-19.c
id-19.c: In function 'void byte_insert_op1(unsigned char*, unsigned char*)':
id-19.c:1:6: internal compiler error: in build2_stat, at tree.c:3670
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.

Tested revisions:
r160165 - crash
r160122 - crash
r159696 - crash
r158095 - crash
r153685 - OK
4.5 r158978 - OK

Reduced testcase (not much different from gcc.dg/graphite/id-19.c)
------------------------------
void byte_insert_op1 (unsigned char *loc, unsigned char *end, unsigned *pto)
{
  while (end != loc)
    *pto = *--end;
}
------------------------------
Comment 1 Sebastian Pop 2010-06-02 19:28:58 UTC
Mine.
Comment 2 Sebastian Pop 2010-06-15 16:19:32 UTC
Patch http://gcc.gnu.org/ml/gcc-patches/2010-06/msg01519.html
Comment 3 Sebastian Pop 2010-06-15 19:12:19 UTC
Subject: Bug 44391

Author: spop
Date: Tue Jun 15 19:11:59 2010
New Revision: 160803

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=160803
Log:
Fix PR44391: use size_one_node for pointer types.

2010-06-15  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/44391
	* graphite-clast-to-gimple.c (graphite_create_new_loop_guard): Use
	size_one_node for pointer types.  Do not call gmp_cst_to_tree.

	* gcc.dg/graphite/pr44391.c: New.

Added:
    trunk/gcc/testsuite/gcc.dg/graphite/pr44391.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/graphite-clast-to-gimple.c
    trunk/gcc/testsuite/ChangeLog

Comment 4 Sebastian Pop 2010-06-15 19:13:45 UTC
Fixed.