Fix PR44391: use size_one_node for pointer types.

2010-06-15  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/44391
	* graphite-clast-to-gimple.c (graphite_create_new_loop_guard): Use
	size_one_node for pointer types.  Do not call gmp_cst_to_tree.

	* gcc.dg/graphite/pr44391.c: New.

From-SVN: r160803